--- a/src/css/App.css
+++ b/src/css/App.css
@@ -22,7 +22,6 @@ outhouse orange: #FEC04F
 
 html{
   box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 
 body{
@@ -46,13 +45,17 @@ h2{
 h3{
   font-family: OakwoodRoughShadow;
   margin-top: 20px;
-  font-size: 40px;
+  font-size: 34px;
   border-bottom: 2px solid black;
   display: inline-block;
 }
 
 .section-title-container {
   text-align: center;
+}
+
+p {
+  font-family: 'Varela Round', sans-serif;
 }
 
 /*Header*/
@@ -66,12 +69,15 @@ header{
 }
 
 .logo-container{
-  float: left;
+  position: absolute;
+  z-index: 2;
 }
 .nav-container{
-  width: 48%;
+  width: 100%;
   position: absolute;
   bottom: 0px;
+  text-align: center;
+  margin: 0px;
 }
 .cart-container{
   position: absolute;
@@ -103,22 +109,26 @@ header{
 /*Nav*/
 .nav{
   width: 100%;
-  margin: 4px 60px;
+  margin-bottom: 4px;
+  display: inline-block;
 }
 
 .nav li{
   display: inline-block;
-  margin-right: 8%;
+}
+.nav-about{
+  margin: 0px 10%;
 }
 
 .nav a{
   color: black;
   text-decoration: none;
   font-family: OakwoodClean;
-  font-size: 24px;
+  font-size: 26px;
 }
 
 .nav a:hover{
+  color: black;
   border-bottom: 2px solid black;
 }
 
@@ -150,34 +160,6 @@ header{
   height: 140px;
 }
 
-
-@media only screen and (max-width: 550px) {
-  header{
-    position: static;
-    height: 125px;
-    text-align: center;
-  }
-
-  .nav-container{
-    position: static;
-    margin-left: 14px;
-    width: 100%;
-  }
-
-  .logo{
-    height: 80px;
-  }
-  .logo-container{
-    float: none;
-  }
-  .logo-horizontal{
-    display: inline-block;
-  }
-  .logo-vertical{
-    display: none;
-  }
-}
-
 /*Albums*/
 
 .album{
@@ -196,7 +178,7 @@ header{
 
 .cover{
   width: 300px;
-  box-shadow: -2px 2px 6px 0px rgba(0,0,0,0.3);
+  box-shadow: -2px 2px 6px 0px rgba(0,0,0,0.4);
 }
 
 h4.artist, h4.title {
@@ -215,4 +197,30 @@ h4.artist{
   border-top: 2px black solid;
   margin-top: 12px;
   padding-top: 8px;
+}
+
+@media only screen and (max-width: 800px) {
+
+  .nav-about{
+    margin: 0px 4%;
+  }
+
+}
+
+@media only screen and (max-width: 650px) {
+  /*header*/
+  header{
+    height: 80px;
+  }
+  .logo{
+    height: 60px;
+  }
+
+  /*nav*/
+
+  .nav-container{
+    display: none;
+  }
+
+  
 }
