--- a/src/css/App.css
+++ b/src/css/App.css
@@ -117,19 +117,22 @@ header{
   display: inline-block;
 }
 .nav-about{
-  margin: 0px 10%;
+  margin: 0px 8%;
 }
 
-.nav a{
+.nav button{
   color: black;
-  text-decoration: none;
   font-family: OakwoodClean;
   font-size: 26px;
+  border: none;
+  padding: 0px;
+  background-color: transparent;
 }
 
-.nav a:hover{
+.nav button:hover{
   color: black;
-  border-bottom: 2px solid black;
+  text-decoration: underline;
+  cursor: pointer
 }
 
 
