--- a/src/css/AlbumPage.css
+++ b/src/css/AlbumPage.css
@@ -39,6 +39,7 @@ p.album-page-code{
 
 .album-page-description-container{
     padding: 20px 2%;
+    padding-bottom: 0;
     border-top: 2px solid black;
 }
   
@@ -101,6 +102,23 @@ button.price, input.price{
     margin-top: 20px;
 }
 
+.album-page-video-container{
+    text-align: center;
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-top: 20px;
+    padding-bottom: 51%
+}
+
+.album-page-video{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;    
+}
+
 @media only screen and (max-width: 850px) {
     h1.album-page-artist{
         font-size: 32px;
@@ -116,5 +134,12 @@ button.price, input.price{
         font-weight: 600;
         font-size: 12px;
     }
+
+    .quote-container{
+        margin-top: 30px;
+        position: static;
+    }
+    
     
 }
+
