--- a/src/css/App.css
+++ b/src/css/App.css
@@ -147,11 +147,15 @@ header{
 }
 
 .photo-container{
-  min-width: 310px;
   height: 500px;
 }
 
 .blaze-photo{
+  height: 500px;
+}
+
+.blaze-photo-slim{
+  display: none;
   height: 500px;
 }
 
@@ -180,13 +184,13 @@ header{
 }
 
 .cover{
-  width: 300px;
+  width: 80%;
   box-shadow: -2px 2px 6px 0px rgba(0,0,0,0.4);
 }
 
 h4.artist, h4.title {
   font-family: 'Varela Round', sans-serif;
-  font-size: 20px;
+  font-size: 16px;
   margin: 2px;
 }
 
@@ -202,15 +206,25 @@ h4.artist{
   padding-top: 8px;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 850px) {
 
   .nav-about{
     margin: 0px 4%;
   }
 
+  h1{
+    font-size: 34px;
+  }
+  
+  h2{
+    font-size: 28px;
+  }
+
+
 }
 
 @media only screen and (max-width: 650px) {
+  
   /*header*/
   header{
     height: 80px;
@@ -220,10 +234,40 @@ h4.artist{
   }
 
   /*nav*/
-
   .nav-container{
     display: none;
   }
 
+  /*hero*/
+  .blaze-photo{
+    display: none;
+  }
+  .blaze-photo-slim{
+    display: inline-block;
+  }
+  .hero-text{
+    padding: 30px 0px;
+  }
+  h1{
+    padding-left: 46px;
+    font-size: 24px;
+    margin-bottom: 90px;
+  }
+  
+  h2{
+    padding-left: 20px;
+    font-size: 20px;
+    margin-bottom: 90px;
+  }
+  .sticker{
+    height: 110px;
+    margin-left: -20px;
+  }
+
+  /*albums*/
+  h4.artist, h4.title {
+    font-size: 14px;
+  }
+  
   
 }
