--- a/src/css/AlbumPage.css
+++ b/src/css/AlbumPage.css
@@ -165,7 +165,11 @@ li.album-page-track{
         margin-top: 30px;
         position: static;
     }
-    
-    
 }
 
+@media only screen and (max-width: 650px){
+    img.album-page-cover{
+        margin-bottom: 6px;
+    }
+    
+}
