--- a/src/css/App.css
+++ b/src/css/App.css
@@ -48,7 +48,7 @@ h2{
 h3{
   font-family: OakwoodRoughShadow;
   margin-top: 20px;
-  font-size: 28px;
+  font-size: 40px;
   display: inline-block;
 }
 
@@ -79,6 +79,7 @@ header{
   position: absolute;
   bottom: 0px;
   text-align: center;
+  left: 100px;
   margin: 0px;
 }
 .cart-container{
@@ -110,16 +111,16 @@ header{
 
 /*Nav*/
 .nav{
-  width: 100%;
+  width: 50%;
+  min-width: 450px;
   margin-bottom: 4px;
-  display: inline-block;
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
 }
 
 .nav li{
   display: inline-block;
-}
-.nav-about{
-  margin: 0px 8%;
 }
 
 .nav button{
