--- a/src/css/AlbumPage.css
+++ b/src/css/AlbumPage.css
@@ -174,6 +174,12 @@ li.album-page-track{
     margin-top: 10px;
 }
 
+p.album-page-disclaimer{
+    font-weight: 900 !important;
+    font-size: 18px;
+    color:rgb(201, 0, 0);
+}
+
 
 @media only screen and (max-width: 850px) {
     h1.album-page-artist{
@@ -201,5 +207,4 @@ li.album-page-track{
     img.album-page-cover{
         margin-bottom: 6px;
     }
-    
 }
