--- a/src/css/global.css
+++ b/src/css/global.css
@@ -174,37 +174,28 @@ p {
 
 /*Albums*/
 
-.album {
-  padding: 10px;
-  text-align: center;
-  margin-top: 14px;
-}
-
-.album:hover h4 {
+.album-container:hover {
   text-decoration: underline;
 }
-
-.album:hover {
-  cursor: pointer;
+.album-container:hover img {
+  margin-bottom: 2px;
+  margin-top: -2px;
+  transition-duration: .1s;
 }
 
 .cover {
-  width: 80%;
   box-shadow: -2px 2px 6px 0px rgba(0, 0, 0, 0.4);
 }
 
-.cover.tall {
-  width: 60%;
-}
-
-h4.artist,
-h4.title {
+p.artist,
+p.title {
   font-family: "Varela Round", sans-serif;
   font-size: 16px;
-  margin: 2px;
+  margin: 0px;
+  color: black;
 }
 
-h4.artist {
+p.artist {
   font-weight: 900;
 }
 
@@ -380,8 +371,8 @@ section#contact:hover * {
   }
 
   /*albums*/
-  h4.artist,
-  h4.title {
+  p.artist,
+  p.title {
     font-size: 14px;
   }
 
