--- a/public/css/global.css
+++ b/public/css/global.css
@@ -23,31 +23,31 @@ a {
 
 @font-face {
   font-family: OakwoodClean;
-  src: url("../../public/fonts/oakwood/Oakwood-Clean.otf") format("opentype");
+  src: url("../fonts/oakwood/Oakwood-Clean.otf") format("opentype");
 }
 @font-face {
   font-family: OakwoodRough;
-  src: url("../../public/fonts/oakwood/Oakwood-Rough.otf") format("opentype");
+  src: url("../fonts/oakwood/Oakwood-Rough.otf") format("opentype");
 }
 @font-face {
   font-family: OakwoodRoughShadow;
-  src: url("../../public/fonts/oakwood/Oakwood-RoughShadow.otf") format("opentype");
+  src: url("../fonts/oakwood/Oakwood-RoughShadow.otf") format("opentype");
 }
 @font-face {
   font-family: OldGrowth;
-  src: url("../../public/fonts/old-growth/OldGrowth-Regular.otf") format("opentype");
+  src: url("../fonts/old-growth/OldGrowth-Regular.otf") format("opentype");
 }
 @font-face {
   font-family: cooper-black-std;
-  src: url("../../public/fonts/cooper-black-std/cooper-black-std.ttf") format("truetype");
+  src: url("../fonts/cooper-black-std/cooper-black-std.ttf") format("truetype");
 }
 @font-face {
   font-family: clarendon;
-  src: url("../../public/fonts/Clarendon_BT_Roman.otf") format("opentype");
+  src: url("../fonts/Clarendon_BT_Roman.otf") format("opentype");
 }
 @font-face {
   font-family: futura;
-  src: url("../../public/fonts/FuturaDisDEE.ttf") format("truetype");
+  src: url("../fonts/FuturaDisDEE.ttf") format("truetype");
 }
 
 * {
